--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Docker login
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+        run: echo "${{ secrets.REGISTRY_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
 
       - name: Rollback container
         run: |
