--- a/.github/workflows/pr-sonarcloud.yml
+++ b/.github/workflows/pr-sonarcloud.yml
@@ -24,8 +24,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v2
+        uses: SonarSource/sonarcloud-github-action@v1
         with:
-          organization: Adolfo
-          projectKey: adolfcg_nebo
-          token: ${{ secrets.SONAR_TOKEN }}
+         projectBaseDir: .
+        env:
+         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
