--- a/.github/workflows/pr-sonarcloud.yml
+++ b/.github/workflows/pr-sonarcloud.yml
@@ -1,11 +1,3 @@
-# .github/workflows/pr-sonarcloud.yml
-name: SonarCloud Analysis
-
-on:
-  pull_request:
-    branches:
-      - main
-
 jobs:
   sonarcloud:
     name: SonarCloud
@@ -14,19 +6,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
 
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin' # or adoptopenjdk
+
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v1
         with:
-         projectBaseDir: .
+          projectBaseDir: .
         env:
-         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
