--- a/.github/workflows/pr-sonarcloud.yml
+++ b/.github/workflows/pr-sonarcloud.yml
@@ -25,9 +25,12 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
-      - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v1
+      - name: SonarCloud Scan (v2)
+        uses: SonarSource/sonarcloud-github-action@v2
         with:
-          projectBaseDir: .
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+         args: >
+          -Dsonar.projectKey=adolfcg_nebo
+          -Dsonar.organization=Adolfo
+          -Dsonar.sources=src
+          -Dsonar.python.version=3.11
+          -Dsonar.token=${{ secrets.SONAR_TOKEN }}
